[tool.poetry]
name = "yuebing-mold"
version = "0.0.0"
authors = []
description = ""

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"

[tool.poetry.group.dev.dependencies]
types-Pillow = "^9.2.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
